--- a/javascript/基础/06.面向对象编程.md
+++ b/javascript/基础/06.面向对象编程.md
@@ -959,7 +959,7 @@ print() // Uncaught TypeError: this is not a Date object.
 
 `bind`方法可以解决这个问题。
 
-```
+```js
 var print = d.getTime.bind(d);
 print() // 1481869925657
 ```
@@ -968,7 +968,7 @@ print() // 1481869925657
 
 `bind`方法的参数就是所要绑定`this`的对象，下面是一个更清晰的例子。
 
-```
+```js
 var counter = {
   count: 0,
   inc: function () {
@@ -985,7 +985,7 @@ counter.count // 1
 
 `this`绑定到其他对象也是可以的。
 
-```
+```js
 var counter = {
   count: 0,
   inc: function () {
@@ -1005,7 +1005,7 @@ obj.count // 101
 
 `bind`还可以接受更多的参数，将这些参数绑定原函数的参数。
 
-```
+```js
 var add = function (x, y) {
   return x * this.m + y * this.n;
 }
@@ -1023,7 +1023,7 @@ newAdd(5) // 20
 
 如果`bind`方法的第一个参数是`null`或`undefined`，等于将`this`绑定到全局对象，函数运行时`this`指向顶层对象（浏览器为`window`）。
 
-```
+```js
 function add(x, y) {
   return x + y;
 }
@@ -1040,19 +1040,19 @@ plus5(10) // 15
 
 `bind`方法每运行一次，就返回一个新函数，这会产生一些问题。比如，监听事件的时候，不能写成下面这样。
 
-```
+```js
 element.addEventListener('click', o.m.bind(o));
 ```
 
 上面代码中，`click`事件绑定`bind`方法生成的一个匿名函数。这样会导致无法取消绑定，所以，下面的代码是无效的。
 
-```
+```js
 element.removeEventListener('click', o.m.bind(o));
 ```
 
 正确的方法是写成下面这样：
 
-```
+```js
 var listener = o.m.bind(o);
 element.addEventListener('click', listener);
 //  ...
@@ -1063,7 +1063,7 @@ element.removeEventListener('click', listener);
 
 回调函数是 JavaScript 最常用的模式之一，但是一个常见的错误是，将包含`this`的方法直接当作回调函数。解决方法就是使用`bind`方法，将`counter.inc`绑定`counter`。
 
-```
+```js
 var counter = {
   count: 0,
   inc: function () {
@@ -1084,7 +1084,7 @@ counter.count // 1
 
 还有一种情况比较隐蔽，就是某些数组方法可以接受一个函数当作参数。这些函数内部的`this`指向，很可能也会出错。
 
-```
+```js
 var obj = {
   name: '张三',
   times: [1, 2, 3],
@@ -1101,7 +1101,7 @@ obj.print()
 
 上面代码中，`obj.print`内部`this.times`的`this`是指向`obj`的，这个没有问题。但是，`forEach`方法的回调函数内部的`this.name`却是指向全局对象，导致没有办法取到值。稍微改动一下，就可以看得更清楚。
 
-```
+```js
 obj.print = function () {
   this.times.forEach(function (n) {
     console.log(this === window);
@@ -1116,7 +1116,7 @@ obj.print()
 
 解决这个问题，也是通过`bind`方法绑定`this`。
 
-```
+```js
 obj.print = function () {
   this.times.forEach(function (n) {
     console.log(this.name);
@@ -1133,7 +1133,7 @@ obj.print()
 
 利用`bind`方法，可以改写一些 JavaScript 原生方法的使用形式，以数组的`slice`方法为例。
 
-```
+```js
 [1, 2, 3].slice(0, 1) // [1]
 // 等同于
 Array.prototype.slice.call([1, 2, 3], 0, 1) // [1]
@@ -1143,14 +1143,14 @@ Array.prototype.slice.call([1, 2, 3], 0, 1) // [1]
 
 `call`方法实质上是调用`Function.prototype.call`方法，因此上面的表达式可以用`bind`方法改写。
 
-```
+```js
 var slice = Function.prototype.call.bind(Array.prototype.slice);
 slice([1, 2, 3], 0, 1) // [1]
 ```
 
 上面代码的含义就是，将`Array.prototype.slice`变成`Function.prototype.call`方法所在的对象，调用时就变成了`Array.prototype.slice.call`。类似的写法还可以用于其他数组方法。
 
-```
+```js
 var push = Function.prototype.call.bind(Array.prototype.push);
 var pop = Function.prototype.call.bind(Array.prototype.pop);
 
@@ -1164,7 +1164,7 @@ a // [1, 2, 3]
 
 如果再进一步，将`Function.prototype.call`方法绑定到`Function.prototype.bind`对象，就意味着`bind`的调用形式也可以被改写。
 
-```
+```js
 function f() {
   console.log(this.v);
 }
@@ -1176,7 +1176,7 @@ bind(f, o)() // 123
 
 上面代码的含义就是，将`Function.prototype.bind`方法绑定在`Function.prototype.call`上面，所以`bind`方法就可以直接使用，不需要在函数实例上使用。
 
-### 6.3对象的继承
+## 3对象的继承
 
 面向对象编程很重要的一个方面，就是对象的继承。A 对象通过继承 B 对象，就能直接拥有 B 对象的所有属性和方法。这对于代码的复用是非常有用的。
 
@@ -1184,13 +1184,13 @@ bind(f, o)() // 123
 
 ES6 引入了 class 语法，基于 class 的继承不在这个教程介绍
 
-#### 6.3.1原型对象概述
+### 3.1原型对象概述
 
-##### 1.构造函数的缺点
+#### 3.1.1.构造函数的缺点
 
 JavaScript 通过构造函数生成新对象，因此构造函数可以视为对象的模板。实例对象的属性和方法，可以定义在构造函数内部。
 
-```
+```js
 function Cat (name, color) {
   this.name = name;
   this.color = color;
@@ -1206,7 +1206,7 @@ cat1.color // '白色'
 
 通过构造函数为实例对象定义属性，虽然很方便，但是有一个缺点。同一个构造函数的多个实例之间，无法共享属性，从而造成对系统资源的浪费。
 
-```
+```js
 function Cat(name, color) {
   this.name = name;
   this.color = color;
@@ -1226,13 +1226,13 @@ cat1.meow === cat2.meow
 
 这个问题的解决方法，就是 JavaScript 的原型对象（prototype）。
 
-##### 2.prototype属性的作用
+#### 3.1.2.prototype属性的作用
 
 JavaScript 继承机制的设计思想就是，原型对象的所有属性和方法，都能被实例对象共享。也就是说，如果属性和方法定义在原型上，那么所有实例对象就能共享，不仅节省了内存，还体现了实例对象之间的联系。
 
 下面，先看怎么为对象指定原型。JavaScript 规定，每个函数都有一个`prototype`属性，指向一个对象。
 
-```
+```js
 function f() {}
 typeof f.prototype // "object"
 ```
@@ -1241,7 +1241,7 @@ typeof f.prototype // "object"
 
 对于普通函数来说，该属性基本无用。但是，对于构造函数来说，生成实例的时候，该属性会自动成为实例对象的原型。
 
-```
+```js
 function Animal(name) {
   this.name = name;
 }
@@ -1258,7 +1258,7 @@ cat2.color // 'white'
 
 原型对象的属性不是实例对象自身的属性。只要修改原型对象，变动就立刻会体现在**所有**实例对象上。
 
-```
+```js
 Animal.prototype.color = 'yellow';
 
 cat1.color // "yellow"
@@ -1269,7 +1269,7 @@ cat2.color // "yellow"
 
 如果实例对象自身就有某个属性或方法，它就不会再去原型对象寻找这个属性或方法。
 
-```
+```js
 cat1.color = 'black';
 
 cat1.color // 'black'
@@ -1281,7 +1281,7 @@ Animal.prototype.color // 'yellow';
 
 总结一下，原型对象的作用，就是定义所有实例对象共享的属性和方法。这也是它被称为原型对象的原因，而实例对象可以视作从原型对象衍生出来的子对象。
 
-```
+```js
 Animal.prototype.walk = function () {
   console.log(this.name + ' is walking');
 };
@@ -1289,7 +1289,7 @@ Animal.prototype.walk = function () {
 
 上面代码中，`Animal.prototype`对象上面定义了一个`walk`方法，这个方法将可以在所有`Animal`实例对象上面调用。
 
-##### 3.原型链
+#### 3.1.3.原型链
 
 JavaScript 规定，所有对象都有自己的原型对象（prototype）。一方面，任何一个对象，都可以充当其他对象的原型；另一方面，由于原型对象也是对象，所以它也有自己的原型。因此，就会形成一个“原型链”（prototype chain）：对象到原型，再到原型的原型……
 
@@ -1297,7 +1297,7 @@ JavaScript 规定，所有对象都有自己的原型对象（prototype）。一
 
 那么，`Object.prototype`对象有没有它的原型呢？回答是`Object.prototype`的原型是`null`。`null`没有任何属性和方法，也没有自己的原型。因此，原型链的尽头就是`null`。
 
-```
+```js
 Object.getPrototypeOf(Object.prototype)
 // null
 ```
@@ -1310,7 +1310,7 @@ Object.getPrototypeOf(Object.prototype)
 
 举例来说，如果让构造函数的`prototype`属性指向一个数组，就意味着实例对象可以调用数组方法。
 
-```
+```js
 var MyArray = function () {};
 
 MyArray.prototype = new Array();
@@ -1326,18 +1326,18 @@ mine instanceof Array // true
 
 上面代码还出现了原型对象的`constructor`属性，这个属性的含义下一节就来解释。
 
-##### 4.constructor属性
+#### 3.1.4.constructor属性
 
 `prototype`对象有一个`constructor`属性，默认指向`prototype`对象所在的构造函数。
 
-```
+```js
 function P() {}
 P.prototype.constructor === P // true
 ```
 
 由于`constructor`属性定义在`prototype`对象上面，意味着可以被所有实例对象继承。
 
-```
+```js
 function P() {}
 var p = new P();
 
@@ -1350,7 +1350,7 @@ p.hasOwnProperty('constructor') // false
 
 `constructor`属性的作用是，可以得知某个实例对象，到底是哪一个构造函数产生的。
 
-```
+```js
 function F() {};
 var f = new F();
 
@@ -1362,7 +1362,7 @@ f.constructor === RegExp // false
 
 另一方面，有了`constructor`属性，就可以从一个实例对象新建另一个实例。
 
-```
+```js
 function Constr() {}
 var x = new Constr();
 
@@ -1372,7 +1372,7 @@ y instanceof Constr // true
 
 上面代码中，`x`是构造函数`Constr`的实例，可以从`x.constructor`间接调用构造函数。这使得在实例方法中，调用自身的构造函数成为可能。
 
-```
+```js
 Constr.prototype.createCopy = function () {
   return new this.constructor();
 };
@@ -1382,7 +1382,7 @@ Constr.prototype.createCopy = function () {
 
 `constructor`属性表示原型对象与构造函数之间的关联关系，如果修改了原型对象，一般会同时修改`constructor`属性，防止引用的时候出错。
 
-```
+```js
 function Person(name) {
   this.name = name;
 }
@@ -1401,7 +1401,7 @@ Person.prototype.constructor === Object // true
 
 所以，修改原型对象时，一般要同时修改`constructor`属性的指向。
 
-```
+```js
 // 坏的写法
 C.prototype = {
   method1: function (...) { ... },
@@ -1423,17 +1423,17 @@ C.prototype.method1 = function (...) { ... };
 
 如果不能确定`constructor`属性是什么函数，还有一个办法：通过`name`属性，从实例得到构造函数的名称。
 
-```
+```js
 function Foo() {}
 var f = new Foo();
 f.constructor.name // "Foo"
 ```
 
-#### 6.3.2instanceof运算符
+### 3.2instanceof运算符
 
 `instanceof`运算符返回一个布尔值，表示对象是否为某个构造函数的实例。
 
-```
+```js
 var v = new Vehicle();
 v instanceof Vehicle // true
 ```
@@ -1442,7 +1442,7 @@ v instanceof Vehicle // true
 
 `instanceof`运算符的左边是实例对象，右边是构造函数。它会检查右边构建函数的原型对象（prototype），是否在左边对象的原型链上。因此，下面两种写法是等价的。
 
-```
+```js
 v instanceof Vehicle
 // 等同于
 Vehicle.prototype.isPrototypeOf(v)
@@ -1452,7 +1452,7 @@ Vehicle.prototype.isPrototypeOf(v)
 
 由于`instanceof`检查整个原型链，因此同一个实例对象，可能会对多个构造函数都返回`true`。
 
-```
+```js
 var d = new Date();
 d instanceof Date // true
 d instanceof Object // true
@@ -1462,7 +1462,7 @@ d instanceof Object // true
 
 由于任意对象（除了`null`）都是`Object`的实例，所以`instanceof`运算符可以判断一个值是否为非`null`的对象。
 
-```
+```js
 var obj = { foo: 123 };
 obj instanceof Object // true
 
@@ -1473,7 +1473,7 @@ null instanceof Object // false
 
 `instanceof`的原理是检查右边构造函数的`prototype`属性，是否在左边对象的原型链上。有一种特殊情况，就是左边对象的原型链上，只有`null`对象。这时，`instanceof`判断会失真。
 
-```
+```js
 var obj = Object.create(null);
 typeof obj // "object"
 Object.create(null) instanceof Object // false
@@ -1483,7 +1483,7 @@ Object.create(null) instanceof Object // false
 
 `instanceof`运算符的一个用处，是判断值的类型。
 
-```
+```js
 var x = [1, 2, 3];
 var y = {};
 x instanceof Array // true
@@ -1494,7 +1494,7 @@ y instanceof Object // true
 
 注意，`instanceof`运算符只能用于对象，不适用原始类型的值。
 
-```
+```js
 var s = 'hello';
 s instanceof String // false
 ```
@@ -1503,14 +1503,14 @@ s instanceof String // false
 
 此外，对于`undefined`和`null`，`instanceof`运算符总是返回`false`。
 
-```
+```js
 undefined instanceof Object // false
 null instanceof Object // false
 ```
 
 利用`instanceof`运算符，还可以巧妙地解决，调用构造函数时，忘了加`new`命令的问题。
 
-```
+```js
 function Fubar (foo, bar) {
   if (this instanceof Fubar) {
     this._foo = foo;
@@ -1523,11 +1523,13 @@ function Fubar (foo, bar) {
 
 上面代码使用`instanceof`运算符，在函数体内部判断`this`关键字是否为构造函数`Fubar`的实例。如果不是，就表明忘了加`new`命令。
 
-#### 6.3.3构造函数的继承
+### 3.3构造函数的继承
 
-让一个构造函数继承另一个构造函数，是非常常见的需求。这可以分成两步实现。第一步是在子类的构造函数中，调用父类的构造函数。
+让一个构造函数继承另一个构造函数，是非常常见的需求。这可以分成两步实现。
 
-```
+第一步是在子类的构造函数中，调用父类的构造函数。
+
+```js
 function Sub(value) {
   Super.call(this);
   this.prop = value;
@@ -1538,7 +1540,7 @@ function Sub(value) {
 
 第二步，是让子类的原型指向父类的原型，这样子类就可以继承父类原型。
 
-```
+```js
 Sub.prototype = Object.create(Super.prototype);
 Sub.prototype.constructor = Sub;
 Sub.prototype.method = '...';
@@ -1548,7 +1550,7 @@ Sub.prototype.method = '...';
 
 另外一种写法是`Sub.prototype`等于一个父类实例。
 
-```
+```js
 Sub.prototype = new Super();
 ```
 
@@ -1556,7 +1558,7 @@ Sub.prototype = new Super();
 
 举例来说，下面是一个`Shape`构造函数。
 
-```
+```js
 function Shape() {
   this.x = 0;
   this.y = 0;
@@ -1571,7 +1573,7 @@ Shape.prototype.move = function (x, y) {
 
 我们需要让`Rectangle`构造函数继承`Shape`。
 
-```
+```js
 // 第一步，子类继承父类的实例
 function Rectangle() {
   Shape.call(this); // 调用父类构造函数
@@ -1589,7 +1591,7 @@ Rectangle.prototype.constructor = Rectangle;
 
 采用这样的写法以后，`instanceof`运算符会对子类和父类的构造函数，都返回`true`。
 
-```
+```js
 var rect = new Rectangle();
 
 rect instanceof Rectangle  // true
@@ -1598,7 +1600,7 @@ rect instanceof Shape  // true
 
 上面代码中，子类是整体继承父类。有时只需要单个方法的继承，这时可以采用下面的写法。
 
-```
+```js
 ClassB.prototype.print = function() {
   ClassA.prototype.print.call(this);
   // some code
@@ -1607,11 +1609,11 @@ ClassB.prototype.print = function() {
 
 上面代码中，子类`B`的`print`方法先调用父类`A`的`print`方法，再部署自己的代码。这就等于继承了父类`A`的`print`方法。
 
-#### 6.3.4多重继承
+### 3.4多重继承
 
 JavaScript 不提供多重继承功能，即不允许一个对象同时继承多个对象。但是，可以通过变通方法，实现这个功能。
 
-```
+```js
 function M1() {
   this.hello = 'hello';
 }
@@ -1640,17 +1642,17 @@ s.world // 'world'
 
 上面代码中，子类`S`同时继承了父类`M1`和`M2`。这种模式又称为 Mixin（混入）。
 
-#### 6.3.5模块
+### 3.5模块
 
 JavaScript 不是一种模块化编程语言，ES6 才开始支持“类”和“模块”。下面介绍传统的做法，如何利用对象实现模块的效果。
 
-##### 1.基本的实现方法
+#### 3.5.1.基本的实现方法
 
 模块是实现特定功能的一组属性和方法的封装。
 
 简单的做法是把模块写成一个对象，所有的模块成员都放到这个对象里面。
 
-```
+```js
 var module1 = new Object({
 　_count : 0,
 　m1 : function (){
@@ -1664,21 +1666,21 @@ var module1 = new Object({
 
 上面的函数`m1`和`m2`，都封装在`module1`对象里。使用的时候，就是调用这个对象的属性。
 
-```
+```js
 module1.m1();
 ```
 
 但是，这样的写法会暴露所有模块成员，内部状态可以被外部改写。比如，外部代码可以直接改变内部计数器的值。
 
-```
+```js
 module1._count = 5;
 ```
 
-##### 2.封装私有变量：构造函数的写法
+#### 3.5.2.封装私有变量：构造函数的写法
 
 我们可以利用构造函数，封装私有变量。
 
-```
+```js
 function StringBuilder() {
   var buffer = [];
 
@@ -1695,7 +1697,7 @@ function StringBuilder() {
 
 上面代码中，`buffer`是模块的私有变量。一旦生成实例对象，外部是无法直接访问`buffer`的。但是，这种方法将私有变量封装在构造函数中，导致构造函数与实例对象是一体的，总是存在于内存之中，无法在使用完成后清除。这意味着，构造函数有双重作用，既用来塑造实例对象，又用来保存实例对象的数据，违背了构造函数与实例对象在数据上相分离的原则（即实例对象的数据，不应该保存在实例对象以外）。同时，非常耗费内存。
 
-```
+```js
 function StringBuilder() {
   this._buffer = [];
 }
@@ -1713,11 +1715,11 @@ StringBuilder.prototype = {
 
 这种方法将私有变量放入实例对象中，好处是看上去更自然，但是它的私有变量可以从外部读写，不是很安全。
 
-##### 3封装私有变量：立即执行函数的写法
+#### 3.5.3封装私有变量：立即执行函数的写法
 
 另一种做法是使用“立即执行函数”（Immediately-Invoked Function Expression，IIFE），将相关的属性和方法封装在一个函数作用域里面，可以达到不暴露私有成员的目的。
 
-```
+```js
 var module1 = (function () {
 　var _count = 0;
 　var m1 = function () {
@@ -1735,17 +1737,17 @@ var module1 = (function () {
 
 使用上面的写法，外部代码无法读取内部的`_count`变量。
 
-```
+```js
 console.info(module1._count); //undefined
 ```
 
 上面的`module1`就是 JavaScript 模块的基本写法。下面，再对这种写法进行加工。
 
-##### 4.模块的放大模式
+#### 3.5.4.模块的放大模式
 
 如果一个模块很大，必须分成几个部分，或者一个模块需要继承另一个模块，这时就有必要采用“放大模式”（augmentation）。
 
-```
+```js
 var module1 = (function (mod){
 　mod.m3 = function () {
 　　//...
@@ -1758,7 +1760,7 @@ var module1 = (function (mod){
 
 在浏览器环境中，模块的各个部分通常都是从网上获取的，有时无法知道哪个部分会先加载。如果采用上面的写法，第一个执行的部分有可能加载一个不存在空对象，这时就要采用"宽放大模式"（Loose augmentation）。
 
-```
+```js
 var module1 = (function (mod) {
 　//...
 　return mod;
@@ -1767,13 +1769,13 @@ var module1 = (function (mod) {
 
 与"放大模式"相比，“宽放大模式”就是“立即执行函数”的参数可以是空对象。
 
-##### 5.输入全局变量
+#### 3.5.5.输入全局变量
 
 独立性是模块的重要特点，模块内部最好不与程序的其他部分直接交互。
 
 为了在模块内部调用全局变量，必须显式地将其他变量输入模块。
 
-```
+```js
 var module1 = (function ($, YAHOO) {
 　//...
 })(jQuery, YAHOO);
@@ -1783,7 +1785,7 @@ var module1 = (function ($, YAHOO) {
 
 立即执行函数还可以起到命名空间的作用。
 
-```
+```js
 (function($, window, document) {
 
   function go(num) {
@@ -1809,15 +1811,15 @@ var module1 = (function ($, YAHOO) {
 
 上面代码中，`finalCarousel`对象输出到全局，对外暴露`init`和`destroy`接口，内部方法`go`、`handleEvents`、`initialize`、`dieCarouselDie`都是外部无法调用的。
 
-### 6.4object对象的相关方法
+## 4object对象的相关方法
 
 JavaScript 在`Object`对象上面，提供了很多相关方法，处理面向对象编程的相关操作。
 
-#### 6.4.1Object.getPrototypeOf()
+### 4.1`Object.getPrototypeOf()`
 
 `Object.getPrototypeOf`方法返回参数对象的原型。这是获取原型对象的标准方法。
 
-```
+```js
 var F = function () {};
 var f = new F();
 Object.getPrototypeOf(f) === F.prototype // true
@@ -1827,7 +1829,7 @@ Object.getPrototypeOf(f) === F.prototype // true
 
 下面是几种特殊对象的原型。
 
-```
+```js
 // 空对象的原型是 Object.prototype
 Object.getPrototypeOf({}) === Object.prototype // true
 
@@ -1839,11 +1841,11 @@ function f() {}
 Object.getPrototypeOf(f) === Function.prototype // true
 ```
 
-#### 6.4.2Object.setPrototypeOf()
+### 4.2`Object.setPrototypeOf()`
 
 `Object.setPrototypeOf`方法为参数对象设置原型，返回该参数对象。它接受两个参数，第一个是现有对象，第二个是原型对象。
 
-```
+```js
 var a = {};
 var b = {x: 1};
 Object.setPrototypeOf(a, b);
@@ -1856,7 +1858,7 @@ a.x // 1
 
 `new`命令可以使用`Object.setPrototypeOf`方法模拟。
 
-```
+```js
 var F = function () {
   this.foo = 'bar';
 };
@@ -1869,13 +1871,13 @@ F.call(f);
 
 上面代码中，`new`命令新建实例对象，其实可以分成两步。第一步，将一个空对象的原型设为构造函数的`prototype`属性（上例是`F.prototype`）；第二步，将构造函数内部的`this`绑定这个空对象，然后执行构造函数，使得定义在`this`上面的方法和属性（上例是`this.foo`），都转移到这个空对象上。
 
-#### 6.4.3Object.create()
+### 4.3`Object.create()`
 
 生成实例对象的常用方法是，使用`new`命令让构造函数返回一个实例。但是很多时候，只能拿到一个实例对象，它可能根本不是由构建函数生成的，那么能不能从一个实例对象，生成另一个实例对象呢？
 
 JavaScript 提供了`Object.create`方法，用来满足这种需求。该方法接受一个对象作为参数，然后以它为原型，返回一个实例对象。该实例完全继承原型对象的属性。
 
-```
+```js
 // 原型对象
 var A = {
   print: function () {
@@ -1895,7 +1897,7 @@ B.print === A.print // true
 
 实际上，`Object.create`方法可以用下面的代码代替。
 
-```
+```js
 if (typeof Object.create !== 'function') {
   Object.create = function (obj) {
     function F() {}
@@ -1909,7 +1911,7 @@ if (typeof Object.create !== 'function') {
 
 下面三种方式生成的新对象是等价的。
 
-```
+```js
 var obj1 = Object.create({});
 var obj2 = Object.create(Object.prototype);
 var obj3 = new Object();
@@ -1917,7 +1919,7 @@ var obj3 = new Object();
 
 如果想要生成一个不继承任何属性（比如没有`toString`和`valueOf`方法）的对象，可以将`Object.create`的参数设为`null`。
 
-```
+```js
 var obj = Object.create(null);
 
 obj.valueOf()
@@ -1928,7 +1930,7 @@ obj.valueOf()
 
 使用`Object.create`方法的时候，必须提供对象原型，即参数不能为空，或者不是对象，否则会报错。
 
-```
+```js
 Object.create()
 // TypeError: Object prototype may only be an Object or null
 Object.create(123)
@@ -1937,7 +1939,7 @@ Object.create(123)
 
 `Object.create`方法生成的新对象，动态继承了原型。在原型上添加或修改任何方法，会立刻反映在新对象之上。
 
-```
+```js
 var obj1 = { p: 1 };
 var obj2 = Object.create(obj1);
 
@@ -1949,7 +1951,7 @@ obj2.p // 2
 
 除了对象的原型，`Object.create`方法还可以接受第二个参数。该参数是一个属性描述对象，它所描述的对象属性，会添加到实例对象，作为该对象自身的属性。
 
-```
+```js
 var obj = Object.create({}, {
   p1: {
     value: 123,
@@ -1973,7 +1975,7 @@ obj.p2 = 'abc';
 
 `Object.create`方法生成的对象，继承了它的原型对象的构造函数。
 
-```
+```js
 function A() {}
 var a = new A();
 var b = Object.create(a);
@@ -1984,11 +1986,11 @@ b instanceof A // true
 
 上面代码中，`b`对象的原型是`a`对象，因此继承了`a`对象的构造函数`A`。
 
-#### 6.4.4Object.prototype.isPrototypeOf()
+### 4.4`Object.prototype.isPrototypeOf()`
 
 实例对象的`isPrototypeOf`方法，用来判断该对象是否为参数对象的原型。
 
-```
+```js
 var o1 = {};
 var o2 = Object.create(o1);
 var o3 = Object.create(o2);
@@ -1999,7 +2001,7 @@ o1.isPrototypeOf(o3) // true
 
 上面代码中，`o1`和`o2`都是`o3`的原型。这表明只要实例对象处在参数对象的原型链上，`isPrototypeOf`方法都返回`true`。
 
-```
+```js
 Object.prototype.isPrototypeOf({}) // true
 Object.prototype.isPrototypeOf([]) // true
 Object.prototype.isPrototypeOf(/xyz/) // true
@@ -2008,11 +2010,11 @@ Object.prototype.isPrototypeOf(Object.create(null)) // false
 
 上面代码中，由于`Object.prototype`处于原型链的最顶端，所以对各种实例都返回`true`，只有直接继承自`null`的对象除外。
 
-#### 6.4.5Object.prototype.`__proto__`
+### 4.5`Object.prototype.__proto__`
 
 实例对象的`__proto__`属性（前后各两个下划线），返回该对象的原型。该属性可读写。
 
-```
+```js
 var obj = {};
 var p = {};
 
@@ -2026,7 +2028,7 @@ Object.getPrototypeOf(obj) === p // true
 
 原型链可以用`__proto__`很直观地表示。
 
-```
+```js
 var A = {
   name: '张三'
 };
@@ -2053,11 +2055,11 @@ B.print === proto.print // true
 
 上面代码中，`A`对象和`B`对象的原型都是`proto`对象，它们都共享`proto`对象的`print`方法。也就是说，`A`和`B`的`print`方法，都是在调用`proto`对象的`print`方法。
 
-#### 6.4.6获取原型对象方法的比较
+### 4.6获取原型对象方法的比较
 
 如前所述，`__proto__`属性指向当前对象的原型对象，即构造函数的`prototype`属性。
 
-```
+```js
 var obj = new Object();
 
 obj.__proto__ === Object.prototype
@@ -2076,7 +2078,7 @@ obj.__proto__ === obj.constructor.prototype
 
 上面三种方法之中，前两种都不是很可靠。`__proto__`属性只有浏览器才需要部署，其他环境可以不部署。而`obj.constructor.prototype`在手动改变原型对象时，可能会失效。
 
-```
+```js
 var P = function () {};
 var p = new P();
 
@@ -2089,7 +2091,7 @@ c.constructor.prototype === p // false
 
 上面代码中，构造函数`C`的原型对象被改成了`p`，但是实例对象的`c.constructor.prototype`却没有指向`p`。所以，在改变原型对象时，一般要同时设置`constructor`属性。
 
-```
+```js
 C.prototype = p;
 C.prototype.constructor = C;
 
@@ -2099,11 +2101,11 @@ c.constructor.prototype === p // true
 
 因此，推荐使用第三种`Object.getPrototypeOf`方法，获取原型对象。
 
-#### 6.4.7Object.getOwnPropertyNames()
+### 4.7`Object.getOwnPropertyNames()`
 
 `Object.getOwnPropertyNames`方法返回一个数组，成员是参数对象本身的所有属性的键名，不包含继承的属性键名。
 
-```
+```js
 Object.getOwnPropertyNames(Date)
 // ["parse", "arguments", "UTC", "caller", "name", "prototype", "now", "length"]
 ```
@@ -2112,17 +2114,17 @@ Object.getOwnPropertyNames(Date)
 
 对象本身的属性之中，有的是可以遍历的（enumerable），有的是不可以遍历的。`Object.getOwnPropertyNames`方法返回所有键名，不管是否可以遍历。只获取那些可以遍历的属性，使用`Object.keys`方法。
 
-```
+```js
 Object.keys(Date) // []
 ```
 
 上面代码表明，`Date`对象所有自身的属性，都是不可以遍历的。
 
-#### 6.4.8Object.prototype.hasOwnProperty()
+### 4.8`Object.prototype.hasOwnProperty()`
 
 对象实例的`hasOwnProperty`方法返回一个布尔值，用于判断某个属性定义在对象自身，还是定义在原型链上。
 
-```
+```js
 Date.hasOwnProperty('length') // true
 Date.hasOwnProperty('toString') // false
 ```
@@ -2131,11 +2133,11 @@ Date.hasOwnProperty('toString') // false
 
 另外，`hasOwnProperty`方法是 JavaScript 之中唯一一个处理对象属性时，不会遍历原型链的方法。
 
-#### 6.4.9in 运算符和 for...in 循环
+### 4.9`in` 运算符和 `for...in` 循环
 
 `in`运算符返回一个布尔值，表示一个对象是否具有某个属性。它不区分该属性是对象自身的属性，还是继承的属性。
 
-```
+```js
 'length' in Date // true
 'toString' in Date // true
 ```
@@ -2144,7 +2146,7 @@ Date.hasOwnProperty('toString') // false
 
 获得对象的所有可遍历属性（不管是自身的还是继承的），可以使用`for...in`循环。
 
-```
+```js
 var o1 = { p1: 123 };
 
 var o2 = Object.create(o1, {
@@ -2162,7 +2164,7 @@ for (p in o2) {
 
 为了在`for...in`循环中获得对象自身的属性，可以采用`hasOwnProperty`方法判断一下。
 
-```
+```js
 for ( var name in object ) {
   if ( object.hasOwnProperty(name) ) {
     /* loop code */
@@ -2172,7 +2174,7 @@ for ( var name in object ) {
 
 获得对象的所有属性（不管是自身的还是继承的，也不管是否可枚举），可以使用下面的函数。
 
-```
+```js
 function inheritedPropertyNames(obj) {
   var props = {};
   while(obj) {
@@ -2189,7 +2191,7 @@ function inheritedPropertyNames(obj) {
 
 下面是一个例子，列出`Date`对象的所有属性。
 
-```
+```js
 inheritedPropertyNames(Date)
 // [
 //  "caller",
@@ -2200,7 +2202,7 @@ inheritedPropertyNames(Date)
 // ]
 ```
 
-#### 6.4.10对象的拷贝
+### 4.10对象的拷贝
 
 如果要拷贝一个对象，需要做到下面两件事情。
 
@@ -2209,7 +2211,7 @@ inheritedPropertyNames(Date)
 
 下面就是根据上面两点，实现的对象拷贝函数。
 
-```
+```js
 function copyObject(orig) {
   var copy = Object.create(Object.getPrototypeOf(orig));
   copyOwnPropertiesFrom(copy, orig);
@@ -2229,7 +2231,7 @@ function copyOwnPropertiesFrom(target, source) {
 
 另一种更简单的写法，是利用 ES2017 才引入标准的`Object.getOwnPropertyDescriptors`方法。
 
-```
+```js
 function copyObject(orig) {
   return Object.create(
     Object.getPrototypeOf(orig),
@@ -2238,4 +2240,4 @@ function copyObject(orig) {
 }
 ```
 
-### 6.5严格模式
+## 5.严格模式
