--- a/CSS/01.CSS教程.md
+++ b/CSS/01.CSS教程.md
@@ -4,13 +4,11 @@
 
 浏览器读取编译css的顺序是==**从右往左**==。
 
-### 1.1引入css样式表
+### 1.1内联样式表
 
-#### 1.1.1内联样式表
+通过HTML标签的`style`属性来设置元素的样式。
 
-通过HTML标签的`style`属性来设置元素的样式
-
-语法:
+- 语法:
 
 ```html
 <标签名 style="属性1:属性值1; 属性2:属性值2; 属性3:属性值3;"> 内容 </标签名>
@@ -18,24 +16,24 @@
 
 实际上任何HTML标签都拥有style属性，用来设置行内式。
 
-示例：
+- 示例：
 
 ```html
 <div style="color: red; font-size: 12px;">青春不常在，抓紧谈恋爱</div>
 ```
 
-注意：
+> 注意：
+>
+> - style其实就是html标签的==属性==
+> - 样式属性和值中间是`:`
+> - 多组属性值之间用`;`隔开
+> - 只能控制当前的标签和以及嵌套在其中的字标签，造成代码冗余
 
-- style其实就是标签的==属性==
-- 样式属性和值中间是`:`
-- 多组属性值之间用`;`隔开
-- 只能控制当前的标签和以及嵌套在其中的字标签，造成代码冗余
+### 1.2内部样式表
 
-#### 1.1.2内部样式表
+是将`CSS`样式集中写在`HTML`文档的`head`头部标签中，并且用`style`标签定义
 
-是将`CSS`代码集中写在`HTML`文档的`head`头部标签中，并且用`style`标签定义
-
-语法：
+- 语法：
 
 ```html
 <head>
@@ -49,10 +47,10 @@
 </head>
 ```
 
-示例：
+- 示例：
 
 ```html
-<style>
+<style type="text/css">
 	 div {
 	 	color: red;
 	 	font-size: 12px;
@@ -60,25 +58,23 @@
 </style>
 ```
 
-注意：
+> 注意： 
+>
+> - `style`标签一般位于`head`标签中，当然理论上他可以放在`HTML`文档的任何地方。
+> - `type="text/css"`  在`html5`中可以省略。
+> - 只能控制当前的页面，代码复用性差。
 
-- `style`标签一般位于`head`标签中，当然理论上他可以放在`HTML`文档的任何地方。
-- `type="text/css"`  在`html5`中可以省略。
-- 只能控制当前的页面
+### 1.3外部样式表
 
-#### 1.1.3外部样式表
+是将所有的样式放在一个或多个以`.CSS`为扩展名的==外部样式表文件中==，通过`link`标签将外部样式表文件==链接==到HTML文档中。
 
-是将所有的样式放在一个或多个以`.CSS`为扩展名的==外部样式表文件中==，通过`link`标签将外部样式表文件==链接==到HTML文档中
-
-语法：
+- 语法：
 
 ```html
 <head>
   <link rel="stylesheet" type="text/css" href="css文件路径">
-</head>
+</head> 
 ```
-
-注意：
 
 - `link `是个==单标签==
 - `link`标签需要放在`head`头部标签中，并且指定`link`标签的==三个属性==
@@ -93,7 +89,9 @@
 
 ### 2.1块级元素
 
-语法：
+div 、p等元素
+
+- 语法：
 
 ```css
 display:block;
@@ -107,9 +105,9 @@ display:block;
 
 注意：
 
-- 只有文字才能组成段落，因此p里面不能放块级元素，==特别是p不能放div== 
+- 只有文字才能组成段落，因此p里面不能放块级元素，==特别是p不能放div== 。
 
-### 2.2内联元素
+### 2.2内联（行内）元素
 
 语法：
 
