--- a/CSS/01.CSS教程.md
+++ b/CSS/01.CSS教程.md
@@ -167,7 +167,18 @@ display:inline-block;
 实际开发场景：
 
 1. 清除浮动
-2. 隐藏超出内容,  不允许内容超过父盒子。
+
+```css
+
+```
+
+1. 隐藏超出内容,  不允许内容超过父盒子。
+
+```css
+
+```
+
+
 
 ## 3.css选择器
 
