--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -20,7 +20,7 @@ Object.print = function (o) { console.log(o) };
 
 #### 1.1.2Object的实例方法
 
-所谓实例方法就是定义在`Object`原型对象`Object.prototype`上的方法。它可以被`Object`实例直接使用。
+所谓**实例方法**就是定义在`Object`原型对象`Object.prototype`上的方法。它可以被`Object`实例直接使用。
 
 ```js
 Object.prototype.print = function () {
@@ -56,7 +56,7 @@ obj instanceof Object // true
 
 **`instanceof`运算符用来验证，一个对象是否为指定的构造函数的实例**。`obj instanceof Object`返回`true`，就表示`obj`对象是`Object`的实例。
 
-如果参数是原始类型的值，`Object`方法将其转为对应的包装对象的实例（参见《原始类型的包装对象》一章）。
+如果参数是原始类型的值，`Object`方法将其转为对应的包装对象的实例。
 
 ```js
 var obj = Object(1);
@@ -113,7 +113,7 @@ var obj = new Object();
 
 > 注意：通过`var obj = new Object()`的写法生成新对象，与字面量的写法`var obj = {}`是等价的。或者说，后者只是前者的一种简便写法。
 
-`Object`构造函数的用法与工具方法很相似，几乎一模一样。使用时，可以接受一个参数，如果该参数是一个对象，则直接返回这个对象；如果是一个原始类型的值，则返回该值对应的包装对象（详见《包装对象》一章）。
+`Object`构造函数的用法与工具方法很相似，几乎一模一样。使用时，可以接受一个参数，如果该参数是一个对象，则直接返回这个对象；如果是一个原始类型的值，则返回该值对应的包装对象。
 
 ```js
 var o1 = {a: 1};
@@ -132,7 +132,7 @@ obj instanceof Number // true
 
 #### 1.4.1Object.keys()，Object.getOwnPropertyNames()
 
-`Object.keys`方法和`Object.getOwnPropertyNames`方法都用来遍历对象的属性。
+`Object.keys`方法和`Object.getOwnPropertyNames`方法**都用来遍历对象的属性**。
 
 `Object.keys`方法的参数是一个对象，**返回一个数组**。该数组的成员都是该对象自身的（而不是继承的）所有属性名。
 
@@ -145,7 +145,7 @@ var obj = {
 Object.keys(obj) // ["p1", "p2"]
 ```
 
-`Object.getOwnPropertyNames`方法与`Object.keys`类似，也是接受一个对象作为参数，返回一个数组，包含了该对象自身的所有属性名。
+`Object.getOwnPropertyNames`方法与`Object.keys`类似，也是接受一个**对象作为参数，返回一个数组**，包含了该对象自身的所有属性名。
 
 ```js
 var obj = {
@@ -156,7 +156,7 @@ var obj = {
 Object.getOwnPropertyNames(obj) // ["p1", "p2"]
 ```
 
-对于一般的对象来说，`Object.keys()`和`Object.getOwnPropertyNames()`返回的结果是一样的。只有涉及不可枚举属性时，才会有不一样的结果。`Object.keys`方法只返回可枚举的属性（详见《对象属性的描述对象》一章），`Object.getOwnPropertyNames`方法还返回不可枚举的属性名。
+对于一般的对象来说，`Object.keys()`和`Object.getOwnPropertyNames()`返回的结果是一样的。只有涉及不可枚举属性时，才会有不一样的结果。`Object.keys`方法**只返回可枚举的属性**，`Object.getOwnPropertyNames`方法还**返回不可枚举的属性名**。
 
 ```js
 var a = ['Hello', 'World'];
@@ -225,7 +225,7 @@ var obj = new Object();
 obj.valueOf() === obj // true
 ```
 
-`valueOf`方法的主要用途是，JavaScript 自动类型转换时会默认调用这个方法（详见《数据类型转换》一章）。
+`valueOf`方法的主要用途是，JavaScript 自动类型转换时会默认调用这个方法。
 
 ```js
 var obj = new Object();
@@ -446,7 +446,7 @@ obj.hasOwnProperty('toString') // false
 
 ### 2.1概述
 
-JavaScript 提供了一个内部数据结构，用来描述对象的属性，控制它的行为，比如该属性是否可写、可遍历等等。这个内部数据结构称为==属性描述对象（attributes object）==。每个属性都有自己对应的属性描述对象，保存该属性的一些元信息。
+JavaScript 提供了一个内部数据结构，用来描述对象的属性，控制它的行为，比如该属性是否可写、可遍历等等。这个内部数据结构称为**属性描述对象（attributes object）**。每个属性都有自己对应的属性描述对象，保存该属性的一些元信息。
 
 下面是属性描述对象的一个例子。
 
@@ -789,7 +789,7 @@ JSON.stringify(obj) // "{}"
 
 上面代码中，`obj.x`属性的`enumerable`为`false`，所以一般的遍历操作都无法获取该属性，使得它有点像“秘密”属性，但不是真正的私有属性，还是可以直接获取它的值。
 
-注意，`for...in`循环包括继承的属性，`Object.keys`方法不包括继承的属性。如果需要获取对象自身的所有属性，不管是否可遍历，可以使用`Object.getOwnPropertyNames`方法。
+> 注意，`for...in`循环包括继承的属性，`Object.keys`方法不包括继承的属性。如果需要获取对象自身的所有属性，不管是否可遍历，可以使用`Object.getOwnPropertyNames`方法。
 
 另外，`JSON.stringify`方法会排除`enumerable`为`false`的属性，有时可以利用这一点。如果对象的 JSON 格式输出要排除某些属性，就可以把这些属性的`enumerable`设为`false`。
 
