--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -6,7 +6,7 @@ JavaScript 原生提供`Object`对象（注意起首的`O`是大写）。
 
 JavaScript 的所有其他对象都继承自`Object`对象，即那些对象都是`Object`的实例。
 
-`Object`对象的原生方法分成两类：`Object`本身的方法与`Object`的实例方法。
+`Object`对象的**原生方法**分成两类：`Object`本身的方法与`Object`的实例方法。
 
 #### 1.1.1Object对象本身的方法
 
@@ -41,7 +41,7 @@ obj.print() // obj
 
 `Object`本身是一个函数，可以当作工具方法使用，将任意值转为对象。**这个方法常用于保证某个值一定是对象**。
 
-如果参数为空（或者为`undefined`和`null`），`Object()`返回一个空对象。
+> 1. 如果参数为空（或者为`undefined`和`null`），`Object()`返回一个空对象。
 
 ```js
 var obj = Object();
@@ -54,9 +54,9 @@ obj instanceof Object // true
 
 上面代码的含义，是将`undefined`和`null`转为对象，结果得到了一个空对象`obj`。
 
-**`instanceof`运算符用来验证，一个对象是否为指定的构造函数的实例**。`obj instanceof Object`返回`true`，就表示`obj`对象是`Object`的实例。
+**`instanceof`运算符用来验证，一个对象是否为指定构造函数的实例**。`obj instanceof Object`返回`true`，就表示`obj`对象是`Object`的实例。
 
-如果参数是原始类型的值，`Object`方法将其转为对应的包装对象的实例。
+> 2. 如果参数是原始类型的值，`Object`方法将其转为对应的包装对象的实例。
 
 ```js
 var obj = Object(1);
@@ -74,7 +74,7 @@ obj instanceof Boolean // true
 
 上面代码中，`Object`函数的参数是各种原始类型的值，转换成对象就是**原始类型值对应的包装对象**。
 
-如果`Object`方法的参数是一个对象，它总是返回该对象，即不用转换。
+> 3. 如果`Object`方法的参数是一个对象，它总是返回该对象，即不用转换。
 
 ```js
 var arr = [];
@@ -113,7 +113,7 @@ var obj = new Object();
 
 > 注意：通过`var obj = new Object()`的写法生成新对象，与字面量的写法`var obj = {}`是等价的。或者说，后者只是前者的一种简便写法。
 
-`Object`构造函数的用法与工具方法很相似，几乎一模一样。使用时，可以接受一个参数，如果该参数是一个对象，则直接返回这个对象；如果是一个原始类型的值，则返回该值对应的包装对象。
+`Object`构造函数的用法与工具方法很相似，几乎一模一样。使用时，可以接受一个参数，**如果该参数是一个对象，则直接返回这个对象；如果是一个原始类型的值，则返回该值对应的包装对象**。
 
 ```js
 var o1 = {a: 1};
@@ -134,7 +134,7 @@ obj instanceof Number // true
 
 `Object.keys`方法和`Object.getOwnPropertyNames`方法**都用来遍历对象的属性**。
 
-`Object.keys`方法的参数是一个对象，**返回一个数组**。该数组的成员都是该对象自身的（而不是继承的）所有属性名。
+`Object.keys`方法的参数是一个对象，**返回一个数组**。该数组的成员都是该对象自身的（**而不是继承的**）所有属性名。
 
 ```js
 var obj = {
@@ -1339,7 +1339,7 @@ arr.toString() // "1,2,3,4,5,6"
 
 #### 3.3.2.`push()，pop()`
 
-**`push`方法用于在数组的末端添加一个或多个元素**，并返回添加新元素后的数组长度。注意：该方法会改变原数组。
+**`push`方法用于在数组的末端添加一个或多个元素**，并返回添加新元素后的数组长度。**注意：该方法会改变原数组**。
 
 ```js
 var arr = [];
@@ -1352,7 +1352,7 @@ arr // [1, 'a', true, {}]
 
 上面代码使用`push`方法，往数组中添加了四个成员。
 
-**`pop`方法用于删除数组的最后一个元素**，并返回该元素。注意，该方法会改变原数组。
+**`pop`方法用于删除数组的最后一个元素**，并返回该元素。**注意，该方法会改变原数组**。
 
 ```js
 var arr = ['a', 'b', 'c'];
@@ -1381,7 +1381,7 @@ arr // [1, 2]
 
 #### 3.3.3`shift()，unshift()`
 
-**`shift()`方法用于删除数组的第一个元素**，并返回该元素。注意，该方法会改变原数组。
+**`shift()`方法用于删除数组的第一个元素**，并返回该元素。**注意，该方法会改变原数组**。
 
 ```js
 var a = ['a', 'b', 'c'];
@@ -1549,7 +1549,7 @@ a.slice(4) // []
 a.slice(2, 1) // []
 ```
 
-`slice`方法的一个重要应用，是将类似数组的对象转为真正的数组。
+> `slice`方法的一个重要应用，是将类似数组的对象转为真正的数组。
 
 ```js
 Array.prototype.slice.call({ 0: 'a', 1: 'b', length: 2 })
@@ -1875,7 +1875,7 @@ arr.every(function (elem, index, arr) {
 
 上面代码中，数组`arr`并非所有成员大于等于`3`，所以返回`false`。
 
-注意，对于空数组，`some`方法返回`false`，`every`方法返回`true`，回调函数都不会执行。
+> 注意，对于空数组，`some`方法返回`false`，`every`方法返回`true`，回调函数都不会执行。
 
 ```js
 function isEven(x) { return x % 2 === 0 }
@@ -1993,7 +1993,7 @@ a.lastIndexOf(2) // 3
 a.lastIndexOf(7) // -1
 ```
 
-注意，这两个方法不能用来搜索`NaN`的位置，即它们无法确定数组成员是否包含`NaN`。
+> 注意，这两个方法不能用来搜索`NaN`的位置，即它们无法确定数组成员是否包含`NaN`。
 
 ```js
 [NaN].indexOf(NaN) // -1
@@ -2168,7 +2168,7 @@ b.valueOf() // true
 
 上面代码的变量`b`是一个`Boolean`对象的实例，它的类型是对象，值为布尔值`true`。
 
-注意，`false`对应的包装对象实例，布尔运算结果也是`true`。
+> 注意，`false`对应的包装对象实例，布尔运算结果也是`true`。
 
 ```js
 if (new Boolean(false)) {
@@ -2192,6 +2192,7 @@ Boolean(null) // false
 Boolean(0) // false
 Boolean('') // false
 Boolean(NaN) // false
+Boolean(false) // false
 
 Boolean(1) // true
 Boolean('false') // true
@@ -2203,7 +2204,7 @@ Boolean(/foo/) // true
 
 上面代码中几种得到`true`的情况，都值得认真记住。
 
-顺便提一下，使用双重的否运算符（`!`）也可以将任意值转为对应的布尔值。
+> 顺便提一下，使用双重的否运算符（`!`）也可以将任意值转为对应的布尔值。
 
 ```js
 !!undefined // false
